{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 556,
  "lineage": "31bdfbc0-48b6-fd47-50a4-a66b3d8662c0",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:security-group/sg-07fac3d3d94c2ce66",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-07fac3d3d94c2ce66",
            "ingress": [],
            "name": "demo-eks-cluster-cluster-20260603012851611100000010",
            "name_prefix": "demo-eks-cluster-cluster-",
            "owner_id": "656732270450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-eks-cluster-cluster",
              "karpenter.sh/discovery": "demo-eks-cluster"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-cluster",
              "karpenter.sh/discovery": "demo-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:security-group/sg-0a3585ca094631928",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a3585ca094631928",
            "ingress": [],
            "name": "demo-eks-cluster-node-20260603012852246900000012",
            "name_prefix": "demo-eks-cluster-node-",
            "owner_id": "656732270450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-eks-cluster-node",
              "karpenter.sh/discovery": "demo-eks-cluster",
              "kubernetes.io/cluster/demo-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-node",
              "karpenter.sh/discovery": "demo-eks-cluster",
              "kubernetes.io/cluster/demo-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1956207433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07fac3d3d94c2ce66",
            "security_group_rule_id": "sgr-0f69e2e21c05f78d3",
            "self": false,
            "source_security_group_id": "sg-0a3585ca094631928",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2240949257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-0237c62caaeed5f01",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3293994371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-0b23be1bf8139cef1",
            "self": false,
            "source_security_group_id": "sg-07fac3d3d94c2ce66",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1134991540",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-006793c09523cc460",
            "self": false,
            "source_security_group_id": "sg-07fac3d3d94c2ce66",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2330263330",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-08a386b9e89aa9a26",
            "self": false,
            "source_security_group_id": "sg-07fac3d3d94c2ce66",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2579022595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-082146ba56cf78c01",
            "self": false,
            "source_security_group_id": "sg-07fac3d3d94c2ce66",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4246335688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-00dc4232f5b0420e8",
            "self": false,
            "source_security_group_id": "sg-07fac3d3d94c2ce66",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2211012289",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-0b6e4229ae115c8e2",
            "self": false,
            "source_security_group_id": "sg-07fac3d3d94c2ce66",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1241258557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-0e2a5771408e180de",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-785554916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-0df7fb4f7da433889",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2324512267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a3585ca094631928",
            "security_group_rule_id": "sgr-082b3e7f8a41ecea3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:network-acl/acl-06d2761001f6b3c5e",
            "default_network_acl_id": "acl-06d2761001f6b3c5e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06d2761001f6b3c5e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "656732270450",
            "subnet_ids": [
              "subnet-097e274d1ff088e79",
              "subnet-0c7b0474ad42aa230",
              "subnet-0d7e2766849ea544e"
            ],
            "tags": {
              "Name": "demo-eks-cluster-vpc-default",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-default",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:route-table/rtb-006eb98e19ed6358b",
            "default_route_table_id": "rtb-006eb98e19ed6358b",
            "id": "rtb-006eb98e19ed6358b",
            "owner_id": "656732270450",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "demo-eks-cluster-vpc-default",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-default",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:security-group/sg-076ccf77de3ffee9e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-076ccf77de3ffee9e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "656732270450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-eks-cluster-vpc-default",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-default",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a87ae4cb61071f4",
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:elastic-ip/eipalloc-09a87ae4cb61071f4",
            "domain": "vpc",
            "id": "eipalloc-09a87ae4cb61071f4",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-169-229-140.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.229.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-eks-cluster-vpc-ap-southeast-1a",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-ap-southeast-1a",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:internet-gateway/igw-0600a7b0d19788780",
            "id": "igw-0600a7b0d19788780",
            "owner_id": "656732270450",
            "tags": {
              "Name": "demo-eks-cluster-vpc",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a87ae4cb61071f4",
            "association_id": "eipassoc-0b2446aade91f4827",
            "connectivity_type": "public",
            "id": "nat-032aec513ed1da890",
            "network_interface_id": "eni-0443c556249bfdf14",
            "private_ip": "10.0.101.131",
            "public_ip": "54.169.229.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7e2766849ea544e",
            "tags": {
              "Name": "demo-eks-cluster-vpc-ap-southeast-1a",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-ap-southeast-1a",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00043398c14cd9b1e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-032aec513ed1da890",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00043398c14cd9b1e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0600a7b0d19788780",
            "id": "r-rtb-0d7ca969c68b76dd31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7ca969c68b76dd3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:route-table/rtb-00043398c14cd9b1e",
            "id": "rtb-00043398c14cd9b1e",
            "owner_id": "656732270450",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-eks-cluster-vpc-private",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-private",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:route-table/rtb-0d7ca969c68b76dd3",
            "id": "rtb-0d7ca969c68b76dd3",
            "owner_id": "656732270450",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-eks-cluster-vpc-public",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-public",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbc2fe434b51db98",
            "route_table_id": "rtb-00043398c14cd9b1e",
            "subnet_id": "subnet-097e274d1ff088e79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dade8d08a7daf70",
            "route_table_id": "rtb-00043398c14cd9b1e",
            "subnet_id": "subnet-0cd7e8f28942a0ec5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cb3635ea60163dd",
            "route_table_id": "rtb-0d7ca969c68b76dd3",
            "subnet_id": "subnet-0d7e2766849ea544e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058bcf9120bafbfbd",
            "route_table_id": "rtb-0d7ca969c68b76dd3",
            "subnet_id": "subnet-0c7b0474ad42aa230"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:subnet/subnet-097e274d1ff088e79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097e274d1ff088e79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656732270450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-eks-cluster-vpc-private-ap-southeast-1a",
              "karpenter.sh/discovery": "demo-eks-cluster",
              "kubernetes.io/cluster/demo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-private-ap-southeast-1a",
              "karpenter.sh/discovery": "demo-eks-cluster",
              "kubernetes.io/cluster/demo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:subnet/subnet-0cd7e8f28942a0ec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd7e8f28942a0ec5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656732270450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-eks-cluster-vpc-private-ap-southeast-1b",
              "karpenter.sh/discovery": "demo-eks-cluster",
              "kubernetes.io/cluster/demo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-private-ap-southeast-1b",
              "karpenter.sh/discovery": "demo-eks-cluster",
              "kubernetes.io/cluster/demo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:subnet/subnet-0d7e2766849ea544e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7e2766849ea544e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656732270450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-eks-cluster-vpc-public-ap-southeast-1a",
              "kubernetes.io/cluster/demo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-public-ap-southeast-1a",
              "kubernetes.io/cluster/demo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:subnet/subnet-0c7b0474ad42aa230",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7b0474ad42aa230",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656732270450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-eks-cluster-vpc-public-ap-southeast-1b",
              "kubernetes.io/cluster/demo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc-public-ap-southeast-1b",
              "kubernetes.io/cluster/demo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b9e47a8c5f831d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:vpc/vpc-0b9e47a8c5f831d6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d2761001f6b3c5e",
            "default_route_table_id": "rtb-006eb98e19ed6358b",
            "default_security_group_id": "sg-076ccf77de3ffee9e",
            "dhcp_options_id": "dopt-0061c496b4e825529",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9e47a8c5f831d6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006eb98e19ed6358b",
            "owner_id": "656732270450",
            "tags": {
              "Name": "demo-eks-cluster-vpc",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc",
              "kubernetes.io/cluster/demo-eks-cluster": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}